--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
            git clone https://github.com/akhilnarang/scripts && cd scripts && bash setup/android_build_env.sh && cd ..
            mkdir phoenix
            cd phoenix
-           wget https://raw.githubusercontent.com/phoenix-1708/PhoenixKernel/NonOC-reb/.circleci/build.sh
+           wget https://raw.githubusercontent.com/phoenix-1708/android_kernel_xiaomi_sweet/arrow-11.0/.circleci/build.sh
            source build.sh
 workflows:
   version: 2.1
