--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: compile
         run: |
-          sudo apt-get -y update && sudo apt-get -y upgrade && sudo apt-get -y install bc build-essential zip curl libstdc++6 git wget python gcc clang libssl-dev openssl repo rsync flex bison gcc-aarch64-linux-gnu
+          sudo apt-get -y update && sudo apt-get -y upgrade && sudo apt-get -y install bc build-essential zip curl libstdc++6 git wget python gcc clang libssl-dev openssl rsync flex bison gcc-aarch64-linux-gnu
           git config --global user.name "phoenix-1708"
           git config --global user.email "harikumar1708@gmail.com"
           git config --global color.ui true
