--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
    steps:
       - run:
           command: |
-           apt-get -y update && apt-get -y upgrade && apt-get -y install bc build-essential zip curl libstdc++6 git wget python gcc clang libssl-dev openssl repo rsync flex bison gcc-aarch64-linux-gnu
+           apt-get -y update && apt-get -y upgrade && apt-get -y install bc build-essential zip curl libstdc++6 git wget python libssl-dev openssl repo rsync flex bison
            git config --global user.name "phoenix-1708"
            git config --global user.email "harikumar1708@gmail.com"
            git config --global color.ui true
